--- a/README.Rmd
+++ b/README.Rmd
@@ -6,128 +6,72 @@ output: github_document
 
 # rush
 
+Rush is a package for asynchronous parallelization in R.
+Tasks are queued and distributed to workers in the background.
+It heavily uses Redis as a data base.
+
 ![](man/figures/README-flow.png)
+
+## Install
+
+[Install Redis](https://redis.io/docs/getting-started/installation/)
 
 ## Example
 
+```{r, include=FALSE}
+future::plan("sequential")
+config = redux::redis_config()
+r = redux::hiredis(config)
+r$FLUSHDB()
+```
+
 ```{r}
 library(rush)
+
+# initialize controller
+rush = Rush$new("test")
+
+# start workers
 future::plan("multisession", workers = 2)
 
-# initialize server
-config = redux::redis_config()
-server = Server$new("test", config)
-server$reset()
-
-fun = function(x1, x2) {
+fun = function(x1, x2, ...) {
   list(y = x1 + x2)
 }
 
-# start workers
-server$start_workers(fun)
-server
-
-# check workers
-server$check_workers()
+rush$start_workers(fun)
+rush
 
 # push tasks
 xss = list(list(x1 = 3, x2 = 5), list(x1 = 4, x2 = 6))
-server$push_tasks(xss)
-Sys.sleep(1)
-server$n_finished_tasks
+keys = rush$push_tasks(xss)
+rush$wait_tasks(keys)
+rush$n_finished_tasks
 
-
-# sync data
-server$data
-server$n_archived_tasks
+# get results
+rush$data
 
 # push more tasks
 xss = list(list(x1 = 1, x2 = 5), list(x1 = 7, x2 = 6))
-server$push_tasks(xss)
-Sys.sleep(1)
-server
+keys = rush$push_tasks(xss)
+rush$wait_tasks(keys)
 
-# to data.table
-server$data
+rush$data
 ```
 
-## `Server`
+## Task States
 
-**public**
+Tasks have four states: `queued`, `running`, `finished`, `failed`.
 
-* `$initialize(id, config)`
-    - Initializes server
-    - `id` is a unique identifier for the data base
-    - `config` is used to connect to the server
+* `queued` tasks are in the wait list.
+* `running` tasks are evaluated on a worker.
+* `finished` tasks pushed their result to the data base.
+* `failed` tasks threw an error.
 
-* `$start_workers(fun, n)`
-    - Starts `fun` on `n` workers
-    - `fun` runs in a loop on new tasks
-    - `$pull_task()` pulls task
-    - `$push_result()` pushes result of `fun` to data base
+## Worker States
 
-* `$stop_workers()`
-    - Stops worker
+Workers have four states: `running`, `terminated`, `killed`, `lost`.
 
-* `$check_workers()`
-    - Checks if an error occurred on a worker
-    - Returns `TRUE` if no error occurred
-    - Returns error message if an error occurred
-
-* `$push_tasks(xss, extra)` -> `keys`
-    - Pushes tasks to workers
-    - Adds task to task queue
-    - Associates task with a key
-    - `xss` -> `list(list(x1 = 3, x2 = 5), list(x1 = 4, x2 = 6))`
-    - `extra` -> `list(list(timestamp, untransformed_x1, untransformed_x2), list(timestamp, untransformed_x1, untransformed_x2))`
-    - Entries of `xss` and `extra` are stored with the same hash
-    - Is called in the main process
-
-* `$pop_task()` -> `list(key, xs = list(x1 = 3, x2 = 5))`
-    - Pulls task from task queue
-    - Is called on workers
-
-* `$push_result(key, ys)` ->
-    - Push result to data base
-    - `ys` -> `list(y = 1)`
-    - Is called on workers
-
-* `$sync_data()`
-    - Syncs data base with main process
-    - Deserializes data base entries
-    - Caches data in data.table
-    - Is called in the main process
-
-**fields**
-
-* `$connector`
-    - Returns connection to data base
-
-* `$data`
-    - Returns data.table of tasks and results
-
-* `$terminate`
-    - Returns `TRUE` if the worker should terminate
-
-* `$queued_tasks`
-    - Returns keys in task queue
-
-* `$running_tasks`
-    - Returns keys of running tasks
-
-* `$finished_tasks`
-    - Returns keys of finished tasks
-
-* `$archived_tasks`
-    - Returns keys of tasks synced to local cache
-
-**private**
-
-* `$.write_values(values, field, keys = NULL)`
-    - Takes multiple lists (`values`), serializes them and writes them to individual redis hashes at `field`
-    - If no keys are provided, new keys are generated
-    - `values` -> `list(list(x1 = 3, x2 = 5), list(x1 = 4, x2 = 6))`
-
-* `$.read_values(keys, fields)`
-    - Reads multiple redis hashes at `fields` and deserializes them
-    - `fields` -> `c("xs", "x_extra", "ys")`
+* `running` workers are evaluating tasks.
+* `terminated` workers are stopped.
+* `killed` workers were killed by the user.
+* `lost` workers crashed.
