--- a/README.Rmd
+++ b/README.Rmd
@@ -25,38 +25,50 @@ r = redux::hiredis(config)
 r$FLUSHDB()
 ```
 
+Initialize the rush controller instance.
+The `instance_id` identifies the instance and worker in the network.
+The `config` is a list of parameters for the connection to Redis.
+
 ```{r}
 library(rush)
+library(redux)
 
-# initialize controller
-rush = Rush$new("test")
+config = redux::redis_config()
+rush = Rush$new(instance_id = "test", config)
 
-# start workers
-future::plan("multisession", workers = 2)
+rush
+```
 
+Next, we define a function that we want to evaluate on the workers.
+
+```{r}
 fun = function(x1, x2, ...) {
   list(y = x1 + x2)
 }
+```
 
-rush$start_workers(fun)
-rush
+We start two worker with the [`future`](https://future.futureverse.org/) package.
 
-# push tasks
+```{r}
+future::plan("multisession", workers = 2)
+
+rush$start_workers(fun = fun)
+```
+
+Now we can push tasks to the workers.
+
+```{r}
 xss = list(list(x1 = 3, x2 = 5), list(x1 = 4, x2 = 6))
 keys = rush$push_tasks(xss)
-rush$wait_tasks(keys)
-rush$n_finished_tasks
-
-# get results
-rush$data
-
-# push more tasks
-xss = list(list(x1 = 1, x2 = 5), list(x1 = 7, x2 = 6))
-keys = rush$push_tasks(xss)
-rush$wait_tasks(keys)
-
-rush$data
+rush$await_tasks(keys)
 ```
+
+And retrieve the results.
+
+```{r}
+rush$fetch_finished_tasks()
+```
+
 
 ## Task States
 
